--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -10,7 +10,7 @@
 	:test-requirement       [ :on "Test::LWP::UserAgent 0.027"^^:CpanId ];
 	:test-requirement       [ :on "HTTP::Message::PSGI"^^:CpanId ];
         :runtime-requirement    [ :on "Moo"^^:CpanId ];
-        :runtime-requirement    [ :on "Attean 0.006"^^:CpanId ];
+        :runtime-requirement    [ :on "Attean 0.005_1"^^:CpanId ];
         :runtime-requirement    [ :on "Types::Standard"^^:CpanId ];
         :runtime-requirement    [ :on "Types::URI"^^:CpanId ];
         :runtime-requirement    [ :on "LWP::UserAgent"^^:CpanId ];
