--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -9,7 +9,7 @@
 	:test-requirement       [ :on "RDF::Endpoint"^^:CpanId ];
 	:test-requirement       [ :on "Test::LWP::UserAgent 0.027"^^:CpanId ];
 	:test-requirement       [ :on "HTTP::Message::PSGI"^^:CpanId ];
-        :runtime-requirement    [ :on "Moo"^^:CpanId ];
+        :runtime-requirement    [ :on "Moo 1.006000"^^:CpanId ];
         :runtime-requirement    [ :on "Attean 0.006"^^:CpanId ];
         :runtime-requirement    [ :on "Types::Standard"^^:CpanId ];
         :runtime-requirement    [ :on "Types::URI"^^:CpanId ];
