Use the new Dist::Inkt profile

--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,3 @@
-;;class='Dist::Inkt::Profile::TOBYINK'
+;;class='Dist::Inkt::Profile::KJETILK'
 ;;name='AtteanX-Store-SPARQL'
 ;;also_skip = [qr/README.pod/]
